// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render campus tag if no campus 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
    </div>
  </Card>
</button>
`;

exports[`doesn't render campus tag if no campus name 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
    </div>
  </Card>
</button>
`;

exports[`doesn't render demographic tag if no 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;

exports[`doesn't render kid friendly tag if no 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;

exports[`doesn't render tag for type \`Interests\` 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;

exports[`renders default photo 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="//s3.amazonaws.com/ns.assets/apollos/group-profile-placeholder.png"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;

exports[`renders with props 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;

exports[`renders without distance 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="plain text-dark-tertiary"
    >
      test description
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;

exports[`renders without schedule 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;

exports[`renders without schedule description 1`] = `
<button
  className="relative one-whole push-bottom@lap-and-up plain"
  id="1"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <Card
    defaultImage="http://test.com/test.jpg"
    left={
      Array [
        "one-whole",
        "two-thirds@lap-and-up",
      ]
    }
    right={
      Array [
        "one-whole",
        "one-third@lap-and-up",
      ]
    }
  >
    <h4
      className="plain text-dark-primary push-half-top push-top@anchored"
    >
      test group
    </h4>
    <h6
      className="em text-dark-tertiary push-half-bottom"
    >
      2.00
       miles away
    </h6>
    <p
      className="plain text-dark-primary"
    />
    <div
      className="soft-half-top"
    >
      <withRouter(Connect(TagWithoutData))
        val="one"
      />
      <withRouter(Connect(TagWithoutData))
        val="two"
      />
      <withRouter(Connect(TagWithoutData))
        val="test type"
      />
      <withRouter(Connect(TagWithoutData))
        val="kid friendly"
      />
      <withRouter(Connect(TagWithoutData))
        val="test demographic"
      />
      <withRouter(Connect(TagWithoutData))
        urlKey="campuses"
        val="Anderson"
      />
    </div>
  </Card>
</button>
`;
